--- a/templates/index.html
+++ b/templates/index.html
@@ -39,30 +39,8 @@
       width: 100px;
     }
   </style>
-  <script id="places-geojson" type="application/json">
-    {
-      "type": "FeatureCollection",
-      "features": [
-      {% for post in posts %}
-        {
-          "type": "Feature",
-          "geometry": {
-            "type": "Point",
-            "coordinates": [{{ post.x }}, {{ post.y }}]
-          },
-          "properties": {
-            "title": "{{ post.title }}",
-            "placeId": "{{ post.id }}",
-            "detailsUrl": "static/places/{{ post.id }}_json_data.json"
-          }
-        }
-        {% if not post.id == last.id %}
-            ,
-        {% endif %}
-      {% endfor %}
-      ]
-    }
-  </script>
+
+  {{ json_final|json_script:"places-geojson" }}
 
   <script id="app-template" type="text/template">
     <div v-bind:class="{'sidebar-content': 1, 'bg-white': selectedPlace, 'bg-secondary': !selectedPlace}">
