--- a/templates/index.html
+++ b/templates/index.html
@@ -40,7 +40,7 @@
     }
   </style>
 
-  {{ json_final|json_script:"places-geojson" }}
+  {{ places_info|json_script:"places-geojson" }}
 
   <script id="app-template" type="text/template">
     <div v-bind:class="{'sidebar-content': 1, 'bg-white': selectedPlace, 'bg-secondary': !selectedPlace}">
